--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adnan Kamal Manik</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -67,29 +68,24 @@
             </div>
             <div class="rightPortion">
                 <section class="edu">
+                    <h3>Education</h3>
                     <p>2023-Ongoing</p>
                     <p>Bachelors (BS)</p>
                     <p>Computer Science (CS)</p>
                     <p>Muhammad Ali Jinnah University</p>
+                    <p><b>CGPA:</b> [cgpa]</p>
                 </section>
                 <section class="cert">
-                    <ul>
-                        <li>[Name of the Award]
-                            <ul>
-                                <li>[Awarded Year]</li>
-                                <li>[Institution]</li>
-                            </ul>
-                        </li>
-
-                    </ul>
+                    <h3>Certifications & Awards</h3>
+                    <p>[Name of the award]</p>
+                    <p>[Awarded year]</p>
+                    <p>[the Institution]</p>
                 </section>
                 <section class="refs">
                     <h3>References</h3>
-                        <ul>
-                            <li>[Full Name]</li>
-                            <li>[Mail Address]</li>
-                            <li>[Phone Number]</li>
-                        </ul>
+                    <p>[Full Name]</p>
+                    <p>[Mail Address]</p>
+                    <p>[Phone Number]</p>
                 </section>
             </div>
         </div>
