--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="head">
             <div class="pfp">
-                <img src="" alt="My Profile Picture">
+                    <img src="pfp.png" alt="My Profile Picture">
                 <h2>[Name]</h2>
             </div>
             <div class="summary">
