--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <div class="head">
             <div class="pfp">
                     <img src="pfp.png" alt="My Profile Picture">
-                <h2>[Name]</h2>
+                <h2>Adnan Manik</h2>
             </div>
             <div class="summary">
                 <section class="cvTitle">
-                    <h3>Cv Title/ CV headline</h3>
-                    <p>[A short sentence that states your role]</p>
+                    <h3>Generative AI & Chatbot</h3>
+                    <p>Designed, developed, and deployed conversational AI systems to  enhance customer experience.</p>
                 </section>
                 <section class="personalProfile">
-                    <h3>Personal Profile / CV summary</h3>
-                    <p>[3-4 sentences that sum up your CV and professional objectives]</p>
+                    <h3>Personal Profile</h3>
+                    <p>I am currently a student and pursuing Bachelors degree in CS I have developed many websites and now I'll start my journey as a Ai Chatbot developer </p>
                 </section>
                 <section class="contactInfo">
-                    <p>[Phone No]</p>
-                    <p>[Email Address]</p>
-                    <p>[Address]</p>
+                    <p>+92-349-2073339</p>
+                    <p>adnanmanik0@gmail.com</p>
+                    <p>Scheme 33, Karachi.</p>
                 </section>
             </div>
         </div>
@@ -36,22 +36,22 @@
                 <section class="proExp">
                     <h3>Professional Experience</h3>
                     <section class="exp">
-                        <h4>Position 1</h4>
-                        <p>Employer</p>
-                        <p>Date & Duration</p>
+                        <h4>Web Developer</h4>
+                        <p>Freelance</p>
+                        <p>2022-2024 (2 years)</p>
                         <ul>
-                            <li>[Description of your responsibility</li>
-                            <li>[Achievements]</li>
+                            <li>Designed, Developed and deployed websites for clients on freelancing websites such as fiverr, upwork and Freelancer</li>
+                            <li>Learned project management and some contracts from top companies</li>
                         </ul>
                     </section>
 
                     <section class="exp">
-                        <h4>Position 2</h4>
-                        <p>Employer</p>
-                        <p>Date & Duration</p>
+                        <h4>Computer Lab Assistant</h4>
+                        <p>Askari Parents Lap School</p>
+                        <p>2019-2021 (2 years)</p>
                         <ul>
-                            <li>[Description of your responsibility</li>
-                            <li>[Achievements]</li>
+                            <li>Managed lab operations and any technical issues kept record of devices and kept systems up-to-date</li>
+                            <li>Learned Managerial skills and sense of responsibility </li>
                         </ul>
                     </section>
                 </section>
@@ -59,9 +59,9 @@
                 <section class="skills">
                     <h3>Skills & Expertise</h3>
                     <ul>
-                        <li>Soft Skills</li>
-                        <li>Technical Skills</li>
-                        <li>Languages</li>
+                        <li>Management</li>
+                        <li>Web-Development, Graphic designing, MS Office suite</li>
+                        <li>English, Urdu, Japanese</li>
                     </ul>
                 </section>
 
@@ -73,7 +73,7 @@
                     <p>Bachelors (BS)</p>
                     <p>Computer Science (CS)</p>
                     <p>Muhammad Ali Jinnah University</p>
-                    <p><b>CGPA:</b> [cgpa]</p>
+                    <p><b>CGPA:</b> 3.95</p>
                 </section>
                 <section class="cert">
                     <h3>Certifications & Awards</h3>
